@@ -1,6 +1,9 @@
 #!/usr/bin/perl -w
 #
 # $Log$
+# Revision 1.5  2004/09/04 19:12:14  jimmyo
+# Accept ppp interfaces as well as ethernet interfaces.
+#
 # Revision 1.4  2004/04/30 16:58:14  jimmyo
 # Added max.
 #
@@ -37,7 +40,7 @@ if (defined $ARGV[0] and $ARGV[0] eq "snmpconf")
 {
 	print "number  1.3.6.1.2.1.2.1.0\n";
 	print "index   1.3.6.1.2.1.2.2.1.1.\n";
-	print "require 1.3.6.1.2.1.2.2.1.3. ^6\$\n"; # Type
+	print "require 1.3.6.1.2.1.2.2.1.3. ^(6|23)\$\n"; # Type
 	print "require 1.3.6.1.2.1.2.2.1.5. [1-9]\n"; # Speed
 	exit 0;
 }
